01-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: basic-k8s
  labels:
    name: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: web
  template:
    metadata:
      labels:
        name: web
    spec:
      containers:
      - name: web
        image: gcr.io/google-samples/hello-app:1.0
        imagePullPolicy: Always
        # resources:
        #   requests:
        #     memory: 500Mi
        #     cpu: 200m
        #   limits:
        #     memory: 1Gi
        #     cpu: 500m
        # livenessProbe:
        #   tcpSocket:
        #     port: 8080
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 1
        #   periodSeconds: 300
        # readinessProbe:
        #   tcpSocket:
        #     port: 8080
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 1
        #   periodSeconds: 30
        #   failureThreshold: 5
        ports:
        - containerPort: 8080
