02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: basic-k8s
  labels:
    name: web
spec:
  type: NodePort
  selector:
    name: web
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30510
    name: http
