03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: basic-k8s
spec:
  ingressClassName: nginx
  rules:
    - host: web.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
